# Dual_Elons_Novel

./: README.md  crew.py  pyproject.toml  story.txt
