[project]
name = "Dual_Elons_Novel"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = [
    "crewai>=0.11.2",
    "ollama>=0.2.1",
    "asyncio>=3.4.3",
    "setuptools>=74.1.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
